force-app/main/default/objects/CLQ_Regulation__c/CLQ_Regulation__c.object-meta.xml
<CustomObject>
    <description>This object stores the standard regulations data that are used in Rule Regulations.</description>
    <label>Regulation</label>
    <nameField>
        <label>Regulation No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>