force-app/main/default/objects/CLQ_Regulation__c/fields/CLQ_Additional_description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Additional_description__c</fullName>
    <label>Additional description</label>
    <type>TextArea</type>
</CustomField>