force-app/main/default/objects/CLQ_Regulation__c/fields/CLQ_Date_Active__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_Active__c</fullName>
    <label>Date Active</label>
    <type>Date</type>
</CustomField>