force-app/main/default/objects/CLQ_Regulation__c/fields/CLQ_Date_Removed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_Removed__c</fullName>
    <label>Date Removed</label>
    <type>Date</type>
</CustomField>