force-app/main/default/objects/CLQ_Regulation__c/fields/CLQ_GSA_High_Risk_Reg__c.field-meta.xml
<CustomField>
    <fullName>CLQ_GSA_High_Risk_Reg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSA High Risk Reg</label>
    <type>Checkbox</type>
</CustomField>