force-app/main/default/objects/CLQ_Regulation__c/fields/CLQ_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>CLQ_High_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Risk</label>
    <type>Checkbox</type>
</CustomField>