force-app/main/default/objects/CLQ_Regulation__c/fields/CLQ_Parent_Regulation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Parent_Regulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Regulation</label>
    <referenceTo>CLQ_Regulation__c</referenceTo>
    <relationshipLabel>Regulations</relationshipLabel>
    <relationshipName>Regulations</relationshipName>
    <type>Lookup</type>
</CustomField>