force-app/main/default/objects/CLQ_Regulation__c/fields/CLQ_Reg_key__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reg_key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Reg_key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>